awfully large gap fix attempt 1

--- a/incidents.css
+++ b/incidents.css
@@ -12,7 +12,7 @@ body {
   margin-top: 50px; /* Space from the top */
   text-align: center;
   border: solid 2px #CAC9D1;
-  padding: 15px 15px 0px 15px;
+  padding: 15px 15px 15px 15px;
   border-radius: 10px;
   background-color: #353D49;
 }
